# naucse-hooks

./: .flake8  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  naucse_hooks.py  pyproject.toml  pytest.ini  requirements.txt  settings.cfg  test_naucse_hooks.py
.github/workflows/: check.yml
templates/: base.html  index.html
